force-app/main/default/objects/TrainingCenter__c/TrainingCenter__c.object-meta.xml
<CustomObject>
    <label>Training Center</label>
    <nameField>
        <label>Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>