force-app/main/default/objects/TrainingCenter__c/fields/Free_Parking__c.field-meta.xml
<CustomField>
    <fullName>Free_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Parking?</label>
    <type>Checkbox</type>
</CustomField>