force-app/main/default/objects/TrainingCenter__c/fields/Parking_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parking_Cost__c</fullName>
    <label>Parking Cost</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>