force-app/main/default/objects/TrainingCenter__c/fields/SpecialInstructions__c.field-meta.xml
<CustomField>
    <fullName>SpecialInstructions__c</fullName>
    <label>Special Instructions</label>
    <length>2768</length>
    <type>Html</type>
</CustomField>