force-app/main/default/objects/TrainingCenter__c/fields/StreetLine2__c.field-meta.xml
<CustomField>
    <fullName>StreetLine2__c</fullName>
    <label>Street Line 2</label>
    <type>TextArea</type>
</CustomField>